--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
   "bugs": {
     "url": "https://github.com/axhon/fastify-typeorm/issues"
   },
-  "homepage": "https://github.com/axhon/fastify-typeorm#readme"
+  "homepage": "https://github.com/axhon/fastify-typeorm#readme",
+  "dependencies": {
+    "fastify-plugin": "^1.2.1"
+  },
+  "peerDependencies": {
+    "typeorm": "^0.2.0"
+    
+  }
 }
