--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dist/index.d.ts"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "typescript": "tsc"
+    "test": "mocha",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,8 @@
   },
   "devDependencies": {
     "@types/node": "^10.12.5",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
     "typescript": "^3.1.6"
   }
 }
